--- a/main.tex
+++ b/main.tex
@@ -37,11 +37,11 @@
 
 \maketitle % Print the title
 
-
-\input{code.tex}
-\input{table.tex}
-\input{picture.tex}
-\input{cite.tex}
+\input{components/header.tex}
+\input{components/code.tex}
+\input{components/table.tex}
+\input{components/picture.tex}
+\input{components/cite.tex}
 
 \bibliographystyle{plain}
 \bibliography{ref} %这里的这个ref就是对文件ref.bib的引用
